v4-dev (20211220)

* Updated changelog file

v4-dev (20211218)

* Replaced neckbeard.xyz with bae.st
* New contact information

v4-dev (20200407)

* Minimum Python version 3.6, not 3.5

v4-dev (20200217)

* Added note in README.md about changing passwords and token files
* Added Fortune Bot to list of bots using Fortudon

v3 stable (20200214)

* Initial release

v3-dev (20200201)

* added official "GLOBAL VARIABLES" section to fortudon.py
* fortudon.py global variable ENCODING allows customization of codepage (recommended for Slackware Linux, see README.md)
* added another fortudon-based bot

v3-dev (20200128)

* Minor documentation edit

v3-dev (20200127)

* Corrected incorrect information in 20200125 changelog
* Added missing changes to 20200125 changelog
* Added idea to todo
* Added list of fortune bots using Fortudon to to README.md
* Added official site to header and --version

v3-dev (20200125)

* Add Fediverse post option
* Pickle protocol changed to 4 with default extension `.p4dat`
* Added user-friendly error if filtering returns nothing
* Switched from random to secrets
* Convert remaining print chevrons to print()
* Changed to standard exit codes
* Python 3.5 or higher required
* Offensive fortunes ending in '-o' now must also be ROT13'd
* Add OSError exceptions when opening files
* Changed from optparse to argparse

Fortudon starts at v3-dev (20200125)

v2-stable (2018) - the Python 3.7.1/UTF-8 version of fortune.py
v1-stable (2008) - the original Python 2 version of fortune.py