@@ -1,3 +1,7 @@
+v4-dev (20220604)
+
+* Update copyright and contact info 
+
 v4-dev (20211220)
 
 * Updated changelog file
